--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ hr{
 	/*padding:3rem;*/
 	/*width: 30%;*/
 	/*display: flex;*/
-	position:fixed;
+/* 	position:fixed; */
 }
 .top-name-contact{
 	color:#fff;
